--- a/.stickler.yml
+++ b/.stickler.yml
@@ -14,6 +14,7 @@ linters:
 files:
   ignore:
       - 'dist/*'
+      - 'src/assets/*'
 
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
